# api/gen/http/dashboards/server/types.go
@@ -87,6 +87,14 @@ type UpdateNotFoundResponseBody struct {
 	Code    *string `form:"code,omitempty" json:"code,omitempty" xml:"code,omitempty"`
 }
 
+// DeleteNotFoundResponseBody is the type of the "dashboards" service "delete"
+// endpoint HTTP response body for the "not_found" error.
+type DeleteNotFoundResponseBody struct {
+	Name    string  `form:"name" json:"name" xml:"name"`
+	Message string  `form:"message" json:"message" xml:"message"`
+	Code    *string `form:"code,omitempty" json:"code,omitempty" xml:"code,omitempty"`
+}
+
 // ResolveNotFoundResponseBody is the type of the "dashboards" service
 // "resolve" endpoint HTTP response body for the "not_found" error.
 type ResolveNotFoundResponseBody struct {
@@ -449,6 +457,17 @@ func NewGetNotFoundResponseBody(res *dashboards.NotFoundError) *GetNotFoundRespo
 // of the "update" endpoint of the "dashboards" service.
 func NewUpdateNotFoundResponseBody(res *dashboards.NotFoundError) *UpdateNotFoundResponseBody {
 	body := &UpdateNotFoundResponseBody{
+		Name:    res.Name,
+		Message: res.Message,
+		Code:    res.Code,
+	}
+	return body
+}
+
+// NewDeleteNotFoundResponseBody builds the HTTP response body from the result
+// of the "delete" endpoint of the "dashboards" service.
+func NewDeleteNotFoundResponseBody(res *dashboards.NotFoundError) *DeleteNotFoundResponseBody {
+	body := &DeleteNotFoundResponseBody{
 		Name:    res.Name,
 		Message: res.Message,
 		Code:    res.Code,
